--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -1,13 +1,83 @@
-{% if user.is_authenticated %}
-{{user.username}}
-{% endif %}
-{% for object in todos %}
-<ul>
-    <li>{{object}}</li>
-</ul>
+{% extends 'index.html' %}
+{% block title %}
+{{title}}
+{%endblock%}
+{% block nav %}
+<nav class="navbar navbar-light navbar-expand-md navigation-clean-search">
+    <div class="container"><a class="navbar-brand" href="{% url 'dashboard' %}"><i class="fa fa-star" id="logostar"></i><strong>Todowoo...</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navcol-1">
+            <ul class="nav navbar-nav">
+                <li class="nav-item" role="presentation"><a class="nav-link" href="{% url 'spec' 'important' %}">Important</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link" href="{% url 'spec' 'urgent' %}">Urgent</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link" href="{% url 'spec' 'due_soon' %}">Due Soon</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link" href="{% url 'spec' 'completed' %}">Complete</a></li>
+            </ul>
+            <form class="form-inline mr-auto" target="_self" action="{% url 'search' %}">
+                <div class="form-group"><label for="search-field"><i class="fa fa-search"></i></label><input class="form-control search-field" type="search" id="search-field" name="search"></div>
+            </form>
+            <div><a class="btn btn-light action-button" role="button" href="#" style="margin-right: 10px">Profile&nbsp;</a></div>
+            <form method="post" action="{% url 'logout' %}">
+                {% csrf_token %}
+                <button class="btn btn-light action-button" type="submit">Logout&nbsp;</button>
+            </form>
+        </div>
+    </div>
+</nav>
+{% endblock %}
 
-{% endfor %}
-<form action="{% url 'logout' %}" method="post">
-    {% csrf_token %}
-    <button type="submit">Logout</button>
-</form>
+{% block main%}
+<body style="background: #7abaff">
+<div class="container" style="position: relative;top: 40px;left: 40px;">
+    <div class="table-responsive">
+        <table class="table" id="itemlist">
+            <thead>
+                <tr style="font-weight: bold">
+                    <th> </th>
+                    <th>Title</th>
+                    <th>Info</th>
+                    <th>Due</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for object in todos %}
+                <tr style="font-weight: bold">
+                    <td>{%if not object.completed %}<a href="{% url 'complete' object.id %}"><i class="fa fa-check"></i></a>{%endif %}</td>
+                    <td>{{object.name}}</td>
+                    <td>{{object.memo}}</td>
+                    <td>{% if object.due %}{{object.due}}{%else%}—{%endif%}</td>
+                    <td style="align-items: center">{%if not object.completed%}Pending {%else%}<a href="{% url 'delete' object.id %}"><i class="fa fa-trash"></i>&nbsp;</a>{%endif%}</td>
+                </tr>
+            {%endfor%}
+            </tbody>
+        </table>
+    </div>
+    {% if spec and title == 'CREATE' %}
+        <div class="container-fluid" id="createform">
+        <form method="POST", action="{% url 'addtodo' %}">
+            {% csrf_token %}
+            <div class="row ctform">
+                <div class="col-md-6 col-lg-6, col-sm-6">{{form.name}}</div>
+                <div class="col-md-6 col-lg-6, col-sm-6">{{form.due}}</div>
+            </div>
+            <div class="row ctform">
+                <div class="col-md-12 col-lg-12, col-sm-12">{{form.memo}}</div>
+            </div>
+            <div class="row ctform">
+                <div class="col-md-6 col-lg-6, col-sm-6">Important {{form.important}}</div>
+                <div class="col-md-6 col-lg-6, col-sm-6">Urgent {{form.urgent}}</div>
+            </div>
+            <div class="row ctform">
+                <div class="col-md-6 col-lg-6, col-sm-6"><button type="submit" id="submitbtn">Create</button></div>
+            </div>
+        </form>
+        </div>
+    {%endif%}
+</div>
+{% if title != 'COMPLETE' %}
+<div id="create" class="container" style="position: relative;top: 40px;left: 40px;">
+    <a class="btn btn-primary add_btn" href="{% url 'spec' 'create' %}" id="createbtn" type="button">Add  <i class="fa fa-paint-brush"></i><br /></a>
+</div>
+{%endif%}
+</body>
+{% endblock %}
