--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -19,10 +19,10 @@
 <body >
     {% block nav %}
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
-        <div class="container"><a class="navbar-brand" href="{% url 'login' %}"><i class="fa fa-star" id="logostar"></i><strong>Todowoo...</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand" href="{% url 'todo:login' %}"><i class="fa fa-star" id="logostar"></i><strong>Todowoo...</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav mr-auto"></ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" {% block nav_link %}href="{% url 'signup' %}"{% endblock %}>{% block nav_lnk_lb%}Sign Up{% endblock %}</a></span></div>
+                <ul class="nav navbar-nav mr-auto"></ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" {% block nav_link %}href="{% url 'todo:signup' %}"{% endblock %}>{% block nav_lnk_lb%}Sign Up{% endblock %}</a></span></div>
         </div>
     </nav>
     {% endblock %}
@@ -49,7 +49,7 @@
                 <a id="facebook" class="social" href="https://www.facebook.com/okoriekenechukwurehoboth/"><i class="icon ion-social-facebook"></i></a>
             </div>
             <ul class="list-inline" style="background-color: rgb(44,49,52);">
-                <li class="list-inline-item"><a href="{% url 'login' %}">Home</a></li>
+                <li class="list-inline-item"><a href="{% url 'todo:login' %}">Home</a></li>
                 <li class="list-inline-item"><a href="#">Services</a></li>
                 <li class="list-inline-item"><a href="https://rehoboth23.pythonanywhere.com/">About</a></li>
                 <li class="list-inline-item"><a href="#">Terms</a></li>
