--- a/todo/templates/signup.html
+++ b/todo/templates/signup.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
-{% block nav_link %}href="{% url 'login' %}"{% endblock %}{% block nav_lnk_lb %}Sign In{% endblock %}
+{% block nav_link %}href="{% url 'todo:login' %}"{% endblock %}{% block nav_lnk_lb %}Sign In{% endblock %}
 {% block form_label %}Sign Up{% endblock %}
 
 {% block main %}
